test/test_ingress/apply.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: fruit
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - '-text=banana'
---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: fruit
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits
  namespace: fruit
spec:
  ingressClassName: nginx
  rules:
    - host: banana.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
